Fix spacing issue.

--- a/static/css/campout.css
+++ b/static/css/campout.css
@@ -50,5 +50,5 @@
 }
 
 #summary .quantity {
-  text-align: center;
+  text-align: left;
 }
